# milestone_2

A-Maze-ing/: .gitignore  LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  test.py
A-Maze-ing/Chi_Version/: README.md  a_maze_ing.py  maze.txt
A-Maze-ing/Chi_Version/display/: maze_display.py  window.py
A-Maze-ing/Chi_Version/maze/: generator.py  renderer.py  solver.py  writer.py
A-Maze-ing/Chi_Version/maze_generator/: generator.py  logo42.py  solver.py
A-Maze-ing/Daniel_Version/: a_maze_ing.py  config.txt  maze.txt
A-Maze-ing/Daniel_Version/configurations/: __init__.py  check_parsing.py
A-Maze-ing/Daniel_Version/display/: maze_display.py  window.py
A-Maze-ing/Daniel_Version/maze_generator/: generator.py  grid.py  writer.py
A-Maze-ing/MazeGen/: maze.txt  maze_generator.py
A-Maze-ing/MazeGenerator/: maze_generator.py
A-Maze-ing/OG_Version/: a_maze_ing.py  config.txt
A-Maze-ing/OG_Version/MazeGen/: walls.py
A-Maze-ing/OG_Version/UI/: menu.py
A-Maze-ing/UI/: menu.py
A-Maze-ing/configurations/: __init__.py  check_parsing.py  config_checker.py
A-Maze-ing/display/: maze_display.py  window.py
A-Maze-ing/maze_generator/: generator.py  grid.py  logo42.py  solver.py  writer.py
A-Maze-ing/mazegen/: __init__.py  generator.py  logo42.py  maze_generator.py  solver.py
A-Maze-ing/new_version/: a_maze_ing.py
A-Maze-ing/new_version/chi_code/: config.txt  maze.txt
A-Maze-ing/new_version/configurations/: __init__.py  (+1 more)
python_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+117 files in other folders)
