[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator with a hidden '42' logo and a BFS solver."
readme = "mazegen/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
    { name = "chilam" },
    { name = "danmorei" },
]
keywords = ["maze", "generator", "labyrinth", "42"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[tool.setuptools]
packages = ["mazegen"]