[project]
name = "matrix-loading"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Filipe Moreira Fernandes",email = "danmorei@f1r4s18.codam.nl"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
